--- a/htmls/event/event_list.html
+++ b/htmls/event/event_list.html
@@ -18,11 +18,4 @@
 		{% end %}
 	</div>
 {% end %}
-{% block bodyright %}
-   <div class="apkbox boxmg" style="width:200px;"><p><a>粉色</a></p></div>
-   <div class="ardbox boxmg" style="width:200px;"><p><a>紫色</a></p></div>
-   <div class="ablbox boxmg" style="width:200px;"><p><a>蓝色</a></p></div>
-   <div class="agrbox boxmg" style="width:200px;"><p><a>绿色</a></p></div>
-   <div class="aylbox boxmg" style="width:200px;"><p><a>黄色</a></p></div>
-   <div class="abrbox boxmg" style="width:200px;"><p><a>棕色</a></p></div>
-{% end %}
+{% block bodyright %}{% end %}
