--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -8,6 +8,7 @@
 		<script src="{{ static_url('js/plugin/jquery.fancybox.pack.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
+		<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
 		<script language="javascript" type="text/javascript">
 			$(document).ready(function() {
 				$('.fancybox').fancybox();
@@ -55,7 +56,12 @@
 					{% block bodyleft %}{% end %}
 				</div>
 				<div id="right">
-					{% if warning %}<div class="apkbox boxmg" style="width:200px;"><p><span id="warning" style="color:red;font-size:12px;">{{ warning }}</span></p></div>{% end %}
+					{% if warning %}<div class="ardbox boxmg" style="width:200px;"><p><span id="warning" style="color:red;font-size:12px;">{{ warning }}</span></p></div>{% end %}
+					<div class="apkbox boxmg" style="width:200px;"><p><div id="alert"></div></p></div>
+					<div class="ablbox boxmg" style="width:200px;"><p><a>蓝色</a></p></div>
+					<div class="agrbox boxmg" style="width:200px;"><p><a>绿色</a></p></div>
+					<div class="aylbox boxmg" style="width:200px;"><p><a>黄色</a></p></div>
+					<div class="abrbox boxmg" style="width:200px;"><p><a>棕色</a></p></div>
 					{% block bodyright %}{% end %}
 				</div>
 			</div>
