--- a/htmls/profile/thirdpart.html
+++ b/htmls/profile/thirdpart.html
@@ -8,8 +8,8 @@
 				<span>绰号：</span><input name="nick" type=text value="{{ nick }}" style="width:300px;height:30px;"/><br/><br/>
 				<span>邮箱：</span><input name="email" type=text style="width:300px;height:30px;"/><br/><br/>
 				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
-				<input name="extra" type=hidden value="{{ extra }}"/>
-				<div style="padding-left:320px;"><input type=submit value="完善信息"/></div>
+				<input name="extra" type=hidden value="{{ extra }}"/><br/>
+				<div style="padding-left:10px;color:red;">第一次用QQ登陆，请完善登陆信息&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type=submit value="完善信息"/></div>
 			</form>
 		</div><br/>
 	</div>
