--- a/htmls/check/c_event.html
+++ b/htmls/check/c_event.html
@@ -22,7 +22,7 @@
 					<td align="right">
 						<input name="b" type="button" value="全选"/>&nbsp;
 						<input name="c" type="button" value="全清"/>&nbsp;
-						<input type="submit" value="提交审核"/>
+						<input type="submit" value="审核通过"/>
 					</td>
 					<td></td>
 				</tr>
