--- a/htmls/event/event_list.html
+++ b/htmls/event/event_list.html
@@ -18,4 +18,8 @@
 		{% end %}
 	</div>
 {% end %}
-{% block bodyright %}{% end %}
+{% block bodyright %}
+	<div class="ablbox boxmg" style="width:200px;"><p>
+		<a href="/event/puba/">发布活动</a>
+	</p></div>
+{% end %}
