--- a/htmls/alert/list.html
+++ b/htmls/alert/list.html
@@ -2,12 +2,13 @@
 
 {% block static %}
 	{% block static-added %}{% end %}
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/alert.css') }}"/>
 {% end %}
 {% block bodyleft %}
 	<div id="showlist">
 		<ul>
 		{% for a in alert_list %}
-			<li>{{a}}</li>
+			<li>{{a['nick']}}：{{ a['content'] }}<a href="/weibo/{{ a['id'] }}">查看</a></li>
 		{% end %}
 		</ul>
 	</div>
