--- a/htmls/event/event_list.html
+++ b/htmls/event/event_list.html
@@ -2,6 +2,7 @@
 
 {% block static %}
 	{% block static-added %}{% end %}
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/event.css') }}"/>
 {% end %}
 {% block bodyleft %}
 	<div id="showlist">
