--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -58,10 +58,10 @@
 				<div id="right">
 					{% if warning %}<div class="ardbox boxmg" style="width:200px;"><p><span id="warning" style="color:red;font-size:12px;">{{ warning }}</span></p></div>{% end %}
 					<div class="apkbox boxmg" style="width:200px;"><p><div id="alert"></div></p></div>
-					<div class="ablbox boxmg" style="width:200px;"><p><a>蓝色</a></p></div>
-					<div class="agrbox boxmg" style="width:200px;"><p><a>绿色</a></p></div>
-					<div class="aylbox boxmg" style="width:200px;"><p><a>黄色</a></p></div>
-					<div class="abrbox boxmg" style="width:200px;"><p><a>棕色</a></p></div>
+					<div class="ablbox boxmg" style="width:200px;display:none;"><p><a>蓝色</a></p></div>
+					<div class="agrbox boxmg" style="width:200px;display:none;"><p><a>绿色</a></p></div>
+					<div class="aylbox boxmg" style="width:200px;display:none;"><p><a>黄色</a></p></div>
+					<div class="abrbox boxmg" style="width:200px;display:none;"><p><a>棕色</a></p></div>
 					{% block bodyright %}{% end %}
 				</div>
 			</div>
