--- a/htmls/weibo/reply.html
+++ b/htmls/weibo/reply.html
@@ -1,10 +1,10 @@
 <dl id="m-{{ reply['id'] }}" class="comment_list">
 	<dt><a href=""><img width="30" height="30" alt="{{ reply['nick'] }}" src="/image/avatar/{{ reply['owner'] }}_30"></a></dt>
 	<dd>
-		<a href="">{{ reply['nick'] }}</a>：{{ reply['content'] }} ({{ reply['created'] }})
+		<a href="">{{ reply['nick'] }}</a>|{{ reply['content'] }} ({{ reply['created'] }})
 		<p class="info">
 			<span>
-				<em><a onclick="delItem(this);return false;" href="#" id="d-{{ reply['id'] }}">删除</a><i class="wb_vline">|</i></em>
+				{% if reply['is_own'] %}<em><a onclick="delItem(this);return false;" href="#" id="d-{{ reply['id'] }}">删除</a><i class="wb_vline">|</i></em>{% end %}
 				<a onclick="Reply.reply(this);return false;" href="#" id="r-{{ reply['id'] }}" nick="{{ reply['nick'] }}" to="{{ reply['tid'] }}">回复</a>
 			</span>
 		</p>
