--- a/htmls/event/event_puba.html
+++ b/htmls/event/event_puba.html
@@ -30,28 +30,28 @@
 	<div id="subnavi" class="gybox"><span style="float:left;display:block;background:#F5F5F5;">活动信息</span><a style="float:left;display:block;margin:auto 250px;">报名信息</a><a style="float:left;display:block;">等待审核</a></div>
 	<div id="event">
 		<form method="POST" action="/event/puba/">
-			<div class="event_li"><label class="eleft">标题<em class="needed">*</em></label><div class="eright"><input type="text" name="title" value="{{ifNone(title)}}"/></div></div>
-			<div class="event_li"><label class="eleft">宣传海报<em class="needed">*</em></label><div class="eright">
+			<div class="li"><label class="lil">标题<em class="needed">*</em></label><div class="lir"><input type="text" name="title" value="{{ifNone(title)}}"/></div></div>
+			<div class="li"><label class="lil">宣传海报<em class="needed">*</em></label><div class="lir">
 				{% if ifNone(logo) %}<span><input type="hidden" name="logo" value="{{logo}}"/>已上传</span>{% else %}<div id="poster">Uploadify</div>{% end %}
 			</div></div>
-			<div class="event_li"><label class="eleft">人员配置<em class="needed">*</em></label><div class="eright"><input type="text" name="members" value="发起人：{{current_user}}"></div></div>
-			<div class="event_li"><label class="eleft">类型<em class="needed">*</em></label>
-				<div class="eright">
+			<div class="li"><label class="lil">人员配置<em class="needed">*</em></label><div class="lir"><input type="text" name="members" value="发起人：{{current_user}}"></div></div>
+			<div class="li"><label class="lil">类型<em class="needed">*</em></label>
+				<div class="lir">
 					<select name="tags"><option value ="montain">登山</option><option value ="swim">游泳</option></select>
 					<select name="is_merc"><option value ="no_merc">非商业</option><option value ="is_merc">商业</option></select>
 					<select name="level"><option value ="1.0">1.0</option><option value ="1.5">1.5</option></select>
 					<select name="club"><option value ="site">公开</option></select>
 				</div>
 			</div>
-			<div class="event_li" style="display:none;"><label class="eleft">路线<em class="needed">*</em></label><div class="eright">{{ifNone(route)}}</div></div>
-			<div class="event_li"><label class="eleft">日期<em class="needed">*</em></label><div class="eright"><script>toggleDate("begin_time", 0,0,0)</script></div></div>
-			<div class="event_li"><label for="" class="eleft">地点<em class="needed">*</em></label><div class="eright"><input type="text" name="place" value="{{ifNone(place)}}"></div></div>
-			<div class="event_li"><label class="eleft">行程安排<em class="needed">*</em></label><div class="eright"><textarea name="schedule_tl" rows="5" cols="60">{{ifNone(schedule_tl)}}</textarea></div></div>
-			<div class="event_li"><label class="eleft">费用明细<em class="needed">*</em></label><div class="eright"><textarea name="spend_tl" rows="3" cols="60">{{ifNone(spend_tl)}}</textarea></div></div>
-			<div class="event_li"><label class="eleft">装备要求<em class="needed"></em></label><div class="eright"><textarea name="	" rows="3" cols="60">{{ifNone(equip)}}</textarea></div></div>
-			<div class="event_li"><label class="eleft">注意事项<em class="needed"></em></label><div class="eright"><textarea name="declare_tl" rows="3" cols="60">{{ifNone(declare_tl)}}</textarea></div></div>
-			<div class="event_li"><label class="eleft">免责声明<em class="needed"></em></label><div class="eright"><textarea name="attention_tl" rows="3" cols="60">{{ifNone(attention_tl)}}</textarea></div></div>
-			<div class="event_li"><label class="eleft"><em class="needed"></em></label><div class="eright"><input type="submit" value="提交"></div></div>
+			<div class="li" style="display:none;"><label class="lil">路线<em class="needed">*</em></label><div class="lir">{{ifNone(route)}}</div></div>
+			<div class="li"><label class="lil">日期<em class="needed">*</em></label><div class="lir"><script>toggleDate("begin_time", 0,0,0)</script></div></div>
+			<div class="li"><label for="" class="lil">地点<em class="needed">*</em></label><div class="lir"><input type="text" name="place" value="{{ifNone(place)}}"></div></div>
+			<div class="li"><label class="lil">行程安排<em class="needed">*</em></label><div class="lir"><textarea name="schedule_tl" rows="5" cols="60">{{ifNone(schedule_tl)}}</textarea></div></div>
+			<div class="li"><label class="lil">费用明细<em class="needed">*</em></label><div class="lir"><textarea name="spend_tl" rows="3" cols="60">{{ifNone(spend_tl)}}</textarea></div></div>
+			<div class="li"><label class="lil">装备要求<em class="needed"></em></label><div class="lir"><textarea name="	" rows="3" cols="60">{{ifNone(equip)}}</textarea></div></div>
+			<div class="li"><label class="lil">注意事项<em class="needed"></em></label><div class="lir"><textarea name="declare_tl" rows="3" cols="60">{{ifNone(declare_tl)}}</textarea></div></div>
+			<div class="li"><label class="lil">免责声明<em class="needed"></em></label><div class="lir"><textarea name="attention_tl" rows="3" cols="60">{{ifNone(attention_tl)}}</textarea></div></div>
+			<div class="li"><label class="lil"><em class="needed"></em></label><div class="lir"><input type="submit" value="提交"></div></div>
 		</form>
 	</div>
 {% end %}
