--- a/htmls/util/input_toggle.html
+++ b/htmls/util/input_toggle.html
@@ -1,6 +1,6 @@
 <div>
-	<a id="1234567890" href="#" url="/a/toggle/input" kind="memo" onclick="toggleInput(this);return false;" value="">点击编辑</a>
-	<input type="text" style="display:none;" value=""/>
+	<a href="#" kind="memo" onclick="toggleInput(this);return false;" value="">点击编辑</a>
+	<input type="text" name={{name}} style="display:none;" value=""/>
 </div>
 
 
