fix bug about oauth2

--- a/htmls/event/event_show.html
+++ b/htmls/event/event_show.html
@@ -47,7 +47,7 @@
 			<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a">
 		</form><br/><hr/>
 		<div class="wb_items" maintype="{{ tid }}" subtype="" title="#{{ title }}#">
-			<div class="bottom wb_item"><a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;">没有更多的了</a><input type="hidden" value="0"></div>
+			<div id="wb_bottom" class="bottom wb_item"><a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;">没有更多的了</a><input type="hidden" value="0"></div>
 		</div>
 	</div>
 {% end %}
