--- a/htmls/weibo/weibo.html
+++ b/htmls/weibo/weibo.html
@@ -19,7 +19,7 @@
 			<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a">
 		</form><br/><hr/>
 		<div class="wb_items" maintype="" subtype="">
-			<div class="bottom wb_item">
+			<div id="wb_bottom" class="bottom wb_item">
 				<a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;"></a>
 				<input type="hidden" value="0">
 			</div>
