--- a/htmls/profile/auth.html
+++ b/htmls/profile/auth.html
@@ -6,8 +6,8 @@
 		<div style="margin:60px 0 0 10px;">
 			<form action="/auth/" method="POST">
 				<h1 style="color:red;font-size:20px;">昵称修改</h1><br/>
-				<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
-				<input name="next" type=hidden value="{{ extra }}"/>
+				<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;" value="{{ nick }}"/><br/><br/>
+				<input name="extra" type=hidden value="{{ extra }}"/>
 				<div style="padding-left:320px;"><input type=submit value="修改"/></div>
 			</form>
 		</div><br/>
