--- a/htmls/event/event_show.html
+++ b/htmls/event/event_show.html
@@ -11,7 +11,7 @@
 {% end %}
 {% block bodyleft %}
 	<div id="showdetail">
-		<img width=300 height=300 src="/image/avatar/{{logo}}_300"/>
+		<img width=300 height=300 src="/image/attach/{{logo}}_300"/>
 		<div style="border-bottom:1px solid #FFCC00;">
 			<h4>活动信息</h4>
 			<p>发起人：{{ nick }}</p>
@@ -33,7 +33,7 @@
 		<p>花费统计：{{ spend_tl }}</p>
 		<p style="display:none;">装备要求：{{ equip }}</p>
 		<p>免责声明：{{ declare_tl }}</p>
-		<p style="display:none;">注意事项：{{ attention_tl }}</p>
+		<p>注意事项：{{ attention_tl }}</p>
 		<p style="display:none;">人员配置：{{ members }}</p>
 	</div>
 	<div style="clear:both;"></div>
