--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -26,7 +26,7 @@
 					<span><a href="/weibo/">微博</a></span>
 					<span><a href="/event/">活动</a></span>
 					<span><a href="">相册</a></span>
-					<span><a href="">地图</a></span>
+					<span><a href="/map/">地图</a></span>
 					<span><a href="">装备</a></span>
 					<input type="text" value="活动 相册" style="border:1px solid #D6D6D6;color:#C0C0C0;background:#F5F5F5;height:28px;width:200px;"/>
 					&nbsp&nbsp<input type="submit" value="搜索"/>
@@ -52,7 +52,7 @@
 			</div>
 			<div id="bodier">
 				<div id="left">
-					{% if title %}<div id="title">{{title}}</div>{% end %}
+					{% if title %}<div id="title" style="width:765px;">{{title}}</div>{% end %}
 					{% block bodyleft %}{% end %}
 				</div>
 				<div id="right">
