--- a/htmls/event/event_puba.html
+++ b/htmls/event/event_puba.html
@@ -49,8 +49,8 @@
 			<div class="li"><label class="lil">行程安排<em class="needed">*</em></label><div class="lir"><textarea name="schedule_tl" rows="5" cols="60">{{ifNone(schedule_tl)}}</textarea></div></div>
 			<div class="li"><label class="lil">费用明细<em class="needed">*</em></label><div class="lir"><textarea name="spend_tl" rows="3" cols="60">{{ifNone(spend_tl)}}</textarea></div></div>
 			<div class="li"><label class="lil">装备要求<em class="needed"></em></label><div class="lir"><textarea name="	" rows="3" cols="60">{{ifNone(equip)}}</textarea></div></div>
-			<div class="li"><label class="lil">注意事项<em class="needed"></em></label><div class="lir"><textarea name="declare_tl" rows="3" cols="60">{{ifNone(declare_tl)}}</textarea></div></div>
-			<div class="li"><label class="lil">免责声明<em class="needed"></em></label><div class="lir"><textarea name="attention_tl" rows="3" cols="60">{{ifNone(attention_tl)}}</textarea></div></div>
+			<div class="li"><label class="lil">注意事项<em class="needed"></em></label><div class="lir"><textarea name="attention_tl" rows="3" cols="60">{{ifNone(declare_tl)}}</textarea></div></div>
+			<div class="li"><label class="lil">免责声明<em class="needed"></em></label><div class="lir"><textarea name="declare_tl" rows="3" cols="60">{{ifNone(attention_tl)}}</textarea></div></div>
 			<div class="li"><label class="lil"><em class="needed"></em></label><div class="lir"><input type="submit" value="提交"></div></div>
 		</form>
 	</div>
