--- a/htmls/map/index.html
+++ b/htmls/map/index.html
@@ -44,7 +44,7 @@
 		// uploadify
 		Do.add('uploadify', {path: 'http://img3.douban.com/js/lib/packed_jquery.uploadify3707512005.js', type:'js', requires: ['http://img3.douban.com/js/packed_swfobject4154961822.js']});
 	</script>
-    <link rel="shortcut icon" href="http://img3.douban.com/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
 	<div id="wrapper" class="fwrap">
