--- a/htmls/profile/login.html
+++ b/htmls/profile/login.html
@@ -8,7 +8,7 @@
 				<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
 				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
 				<input name="next" type=hidden value="{{ n }}"/>
-				<div style="padding-left:320px;"><input type=submit value="登录"/></div>
+				<a href="/">点此注册</a><span style="padding-left:220px;"><input type=submit value="登录"/></span>
 			</form>
 		</div><br/>
 	</div>
