--- a/htmls/map/index.html
+++ b/htmls/map/index.html
@@ -1,4 +1,4 @@
-{% extends ../frame.html %}
+{% extends ../tframe.html %}
 
 {% block static %}
 	<script src="{{ static_url('js/do.js') }}" type="text/javascript"></script>
