--- a/htmls/index.html
+++ b/htmls/index.html
@@ -11,8 +11,9 @@
 		<div style="margin-left:10px;">
 			<a style="background:#F0FFF0;display:none;" href="/auth/sina/"><img src="{{static_url('img/sina24.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp
 	<a style="background:#F0FFF0;" href="/auth/qq/"><img src="{{static_url('img/qq24.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-	<a style="background:#F0FFF0;" href="/auth/sina/"><img src="{{static_url('img/sina24.png')}}"/></a>
-	<br/><br/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a style="background:#F0FFF0;color:red;" href="/account/login/">已注册驴友登录</a>
+	<a style="background:#F0FFF0;" href="/auth/sina/"><img src="{{static_url('img/sina24.png')}}"/></a><br/><br/>
+	&nbsp&nbsp&nbsp&nbsp&nbsp<a style="background:#F0FFF0;display:none;" href="/auth/renren/"><img src="{{static_url('img/renren_28.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+	<a style="background:#F0FFF0;color:red;" href="/account/login/">已注册驴友登录</a>
 		</div><br/><hr/><br/>
 		<form action="/account/register/" method="POST">
 			<span>&nbsp&nbsp&nbsp绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
