--- a/htmls/map/index.html
+++ b/htmls/map/index.html
@@ -1,4 +1,4 @@
-{% extends ../tframe.html %}
+{% extends ../frame.html %}
 
 {% block static %}
 	<script src="{{ static_url('js/do.js') }}" type="text/javascript"></script>
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/map.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<div id="wrapper" class="fwrap" style="background:white;padding:15px;height:500px;width:745px;">
+	<div id="wrapper" class="fwrap" style="background:white;padding:15px;height:600px;width:745px;">
 		<div id="content">
 			<div class="grid-16-8 clearfix">
 				<div class="article">
