--- a/htmls/map/item.html
+++ b/htmls/map/item.html
@@ -1,4 +1,4 @@
-{% extends ../frame.html %}
+{% extends ../tframe.html %}
 
 {% block static %}
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
@@ -7,8 +7,8 @@
 		$(document).ready(function() {
 			var map = yhui.iMap.createMap($('#map_canvas'), {width: 700, height: 500, panControl: false, mapTypeControl: false,
 				zoomControlOptions: {style: google.maps.ZoomControlStyle.SMALL},
-				markControl: true, markCallback: function(){alert('mark failure')}, 
-//				routeControl: true, routeCallback: function(){alert('route failure')},
+				markControl: true, markCallback: function(){alert('mark failure')},
+				routeControl: true, routeCallback: function(){alert('route failure')},
 //				searchControl: true, searchCallback: function(){alert('search failure')}
 			});
 			var latlng = new google.maps.LatLng(34.725737, 135.235871);
