--- a/htmls/map/item.html
+++ b/htmls/map/item.html
@@ -1,21 +1,23 @@
-{% extends ../tframe.html %}
+{% extends ../frame.html %}
 
 {% block static %}
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-	<script type="text/javascript" src="{{ static_url('js/tmap.js') }}"></script>
+
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="{{ static_url('js/tmap.js') }}"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			var map = yhui.iMap.createMap($('#map_canvas'), {width: 700, height: 500, panControl: false, mapTypeControl: false,
 				zoomControlOptions: {style: google.maps.ZoomControlStyle.SMALL},
 				markControl: true, markCallback: function(){alert('mark failure')},
 				routeControl: true, routeCallback: function(){alert('route failure')},
-//				searchControl: true, searchCallback: function(){alert('search failure')}
+				searchControl: true, searchCallback: function(){alert('search failure')},
 			});
 			var latlng = new google.maps.LatLng(34.725737, 135.235871);
 			map.setCenter(latlng);
 			map.setZoom(8);
 		});
 	</script>
+
 	{% block static-added %}{% end %}
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/map.css') }}"/>
 {% end %}
@@ -26,8 +28,11 @@
 {% end %}
 {% block bodyright %}
 	<div class="ablbox boxmg left" style="width:200px;">
-		<select id='points' size=14 style="width:200px;">
-			<option value="1">(41.85380,-87.63304) Level:3</option>
-		</select>
+		<form action="/map/" method="post">
+			<select name="points" id="points" size=10 style="width:100%;">
+				<option value="1">(41.85380,-87.63304) Level:3</option>
+			</select>
+			<input type=submit value="submit">
+		</form>
 	</div>
 {% end %}
